--- a/views/set.ejs
+++ b/views/set.ejs
@@ -20,7 +20,7 @@
 
 <body tabindex="-1">
 
-  <%- include('partials/navbar', {page: ''}) %>
+  <%- include('partials/navbar', {page: '/login'}) %>
 
   <div class="container mx-auto p-4">
 
@@ -54,8 +54,10 @@
 
         <span id="quote"></span>
         <br /><br />
-        <a class="btn btn-success btn-sm" href="/lego/editSet/<%= set.set_num %>">EDIT SET: <%= set.name.toUpperCase() %></a>
-        <a class="btn btn-primary btn-sm" href="#" onclick="history.back(); return false;">RETURN</a>
+        <% if(session.user) { %>
+          <a class="btn btn-success btn-sm" href="/lego/editSet/<%= set.set_num %>">EDIT SET: <%= set.name.toUpperCase() %></a>
+        <% } %>
+          <a class="btn btn-primary btn-sm" href="#" onclick="history.back(); return false;">RETURN</a>
        </p>
 
       </div>
